Fix alignment of short metadata values in sidebar.
(#2364)

--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -3935,6 +3935,7 @@ body.sidebar-open #content {
 
 .sidebar .meta-group {
     margin-bottom: $spacing-medium;
+    justify-content: flex-start;
 
     .value, 
     .comment {
